--- a/gb/20/4/24/n12057206.md
+++ b/gb/20/4/24/n12057206.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mtxlr285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mtxlr285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/mtxlr285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mtxlr285/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mtxlr285/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mtxlr285/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mtxlr285/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>墨尔本暖心事：为医护送餐兼助餐饮员工就业</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/lunch-box-200762_1920-600x400.jpg" />
 <h6>图片仅为示意图。（Pixabay）
 </h6>
 <hr>
-<p>【大纪元2020年04月24日讯】（大纪元记者万梓清<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）近日，墨尔本一位爱心人士发起了一项为一线<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E5%8C%BB%E6%8A%A4%E4%BA%BA%E5%91%98.md#1">医护人员</a><ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E9%80%81%E9%A4%90.md#1">送餐</a>的感恩活动——Operation Thank You: Frontline Meals，此举不仅解决了<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E5%8C%BB%E6%8A%A4%E4%BA%BA%E5%91%98.md#1">医护人员</a>的用餐问题，同时也帮助遭受<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>（<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）重创的餐饮行业。</p>
+<p>【大纪元2020年04月24日讯】（大纪元记者万梓清<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）近日，墨尔本一位爱心人士发起了一项为一线<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8C%BB%E6%8A%A4%E4%BA%BA%E5%91%98.md#1">医护人员</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%80%81%E9%A4%90.md#1">送餐</a>的感恩活动——Operation Thank You: Frontline Meals，此举不仅解决了<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8C%BB%E6%8A%A4%E4%BA%BA%E5%91%98.md#1">医护人员</a>的用餐问题，同时也帮助遭受<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）重创的餐饮行业。</p>
 <p>据《太阳先驱报》报导，Frontline Meals目前已与Epping区Northern Hospital医院合作开展了一个试点项目，为该医院呼吸科和急诊科的医护提供盒饭。<br />
 参与试点的餐厅包括位于North Fitzroy的Moroccan Soup Kitchen、Atlantic Group、Edge Hospitality、Niddrie的Dolce Gusto和Carlton的Heart Attack＆Vine。</p>
-<p><center><a style="border: none; overflow: hidden;" src=></a><img width="600" src="https://raw.githubusercontent.com/mtxlr285/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/mtxlr285/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2F106271171059077%2Fphotos%2Fa.106281551058039%2F106281461058048%2F%3Ftype%3D3&amp;show_text=false&amp;width=552&amp;height=518&amp;appId" width="552" b="518" scrolling="no"></a></center>这些餐厅每送一份盒饭就会收到5－15澳元的捐款，这些捐款来自frontlinemealsmelb.org网站募集的善款。</p>
-<p>从5月初开始，Northern Hospital医院就可以定期获得<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E9%80%81%E9%A4%90.md#1">送餐</a>服务。</p>
-<p>Frontline Meals还计划将这项业务扩展到<ahref="https://github.com/mtxlr285/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>其它地区。该活动创始人奥门（Natasha Oommen）说，她们的目标是在未来两个月内为一线医护提供24,000份盒饭。</p>
+<p><center><a style="border: none; overflow: hidden;" src=></a><a href="https://d1bfxyb2xiiyyy.cloudfront.net/S8ztRwzjn"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/ntdtv/facebook.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2F106271171059077%2Fphotos%2Fa.106281551058039%2F106281461058048%2F%3Ftype%3D3&amp;show_text=false&amp;width=552&amp;height=518&amp;appId" width="552" b="518" scrolling="no"></a></center>这些餐厅每送一份盒饭就会收到5－15澳元的捐款，这些捐款来自frontlinemealsmelb.org网站募集的善款。</p>
+<p>从5月初开始，Northern Hospital医院就可以定期获得<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%80%81%E9%A4%90.md#1">送餐</a>服务。</p>
+<p>Frontline Meals还计划将这项业务扩展到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>其它地区。该活动创始人奥门（Natasha Oommen）说，她们的目标是在未来两个月内为一线医护提供24,000份盒饭。</p>
 <p>奥门表示，这项活动体现了社区对一线医护人员的感激，同时也支持了墨尔本的餐饮业。</p>
 <p>除此之外，墨尔本各地餐厅也在尽其所能来支持当地的医护人员。</p>
 <p>位于Footscray的The Plough Hotel酒店开始每周更换一次外卖菜单，食客每花费30澳元，该酒店就向Western Health医院工作人员捐赠一份盒饭。</p>
@@ -20,44 +20,44 @@
 <p>责任编辑：李欣然</p>
 
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/3/7/n11922895.md#1">中共肺炎：澳出入境禁令持续 或先开放新西兰</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/6/n12006525.md#1">助力一线医护人员 墨尔本大学生免费做餐送餐</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/11/n12022901.md#1">中共肺炎爆发 澳洲人酒品消费激增</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/14/n12028513.md#1">维州警方开错罚单 称公众仍可去营业场所</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/15/n12031534.md#1">疫情期间 如何让新鲜食材“主动”上门？</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/21/n12048037.md#1">中共肺炎爆发 澳洲哪些人更忙碌？</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12054606.md#1">马达加斯加背包客因疫情受困 墨尔本好心家庭收留</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/24/n12058605.md#1">疫情难阻购房热情 Albert Park一住宅740万售出</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/24/n12057369.md#1">墨市四警察殉职案 保时捷司机被控多项罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/7/n11922895.md#1">维州新增9149例病毒感染 新州新增20389例</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/6/n12006525.md#1">助力一线医护人员 墨尔本大学生免费做餐送餐</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/11/n12022901.md#1">中共肺炎爆发 澳洲人酒品消费激增</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/14/n12028513.md#1">维州警方开错罚单 称公众仍可去营业场所</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/15/n12031534.md#1">疫情期间 如何让新鲜食材“主动”上门？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/21/n12048037.md#1">中共肺炎爆发 澳洲哪些人更忙碌？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690439.md#1">无家可归男子为挣200元 冒充他人打疫苗被控欺骗</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690430.md#1">F1赛事四月重回墨尔本 观众数或近创纪录水平</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690233.md#1">【一线采访】中共文革式防疫 上海民怨沸腾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690407.md#1">2021年NAPLAN成绩 维州百所最佳学校出炉</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/5/n10538029.md#1" target="_blank">王友琴：文革中的王冷之死</a></li><li><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10706291.md#1" target="_blank">波兰中欧经济论坛 政要签名支持控告江泽民</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/13/n11449283.md#1" target="_blank">袁斌：巫宁坤们的遭遇告诉后人什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340432.md#1" target="_blank">美国务院年度报告 批中共严重打压宗教自由</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12055983.md#1">平壤封城 金与正遽然上位 朝鲜早现异动</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12054189.md#1">【翻墙必看】金正恩或脑残 令中共雪上加霜</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12053941.md#1">【拍案惊奇】骇客攻武汉病毒所 京城面临大清洗</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12056235.md#1">中共再捐三千万美元给世卫 遭民抨击</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12053119.md#1">【新闻看点】忙四处挥拳？北京再遭国际重击</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12056000.md#1">王健林消失100天 负债约4千亿元</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12054555.md#1">周扬青认分手 亲揭罗志祥这些年花心不断</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12053302.md#1">三月大婴儿趴睡死亡 马伊琍斥：专家是刽子手</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/21/n12050674.md#1">郎朗参加全球抗疫音乐会 国籍标注美国引热议</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/23/n12056595.md#1">70岁理查·基尔再添子 37岁妻子诞下男婴</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12051978.md#1">印度专家：5000年前文献“预言”中共病毒</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/4/n12003303.md#1">修行高人 开通阴阳两界为哪桩？</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12053769.md#1">【历史上的瘟疫】神农尝百草的秘密</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/13/2/18/n3803627.md#1">米开朗基罗（5）《圣家族》</a></li>
-<li><a href="https://github.com/mtxlr285/djy/blob/master/gb/20/4/22/n12053136.md#1">我所记忆的“四．二五”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141250.md#1">蓬佩奥：香港无自治 不再保证获美特殊待遇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140250.md#1">台加紧研发多种导弹 应对中共可能的攻台行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12144173.md#1">李克强称6亿人月收入千元 震惊不少网友</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141717.md#1">美宣布香港无自治 川普将采取哪些行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140587.md#1">中共早就知晓疫情？美国夫妇忆武汉惊魂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12139391.md#1">黄秋生居家检疫出关 夸台湾防疫、想吃卤肉饭</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12139000.md#1">欧阳娜娜演技遭负评 何炅打抱不平后又道歉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138702.md#1">疫情下贝克汉姆近照曝光 头发稀疏秃顶明显</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/18/n12042366.md#1">灾难前神明托梦示警 信者免遭劫难</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/4/7/n3559927.md#1">围棋别称中的故事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/25/n12134403.md#1">“一鼓作气” 一场战争醒悟一生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/10/n12019598.md#1">古典音乐之光——洪大的基奠，完美的结合</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/22/n12128808.md#1">世界唯一无坝引水都江堰  中华科学文明活见证</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mtxlr285/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mtxlr285/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/24/n12057206.htm">墨尔本暖心事：为医护送餐兼助餐饮员工就业</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/24/n12057206.htm">墨尔本暖心事：为医护送餐兼助餐饮员工就业</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mtxlr285/djy/blob/master/gb/20/4/24/n12057206.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mtxlr285/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mtxlr285/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mtxlr285/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mtxlr285/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mtxlr285/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/4/24/n12057206.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
